5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4477/executions/1575_996.log
== TEST (2019-03-28 10:54:18) 
-- CODE:
print("  ***** ")
print("(* o o *) ")
print("*  ^  * ")
print("* --- * ")
print("  ***** ")
-- OUTPUT:
***** 
(* o o *) 
*  ^  * 
* --- * 
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:54:36) 
-- CODE:
print("  ***** ")
print("(* o o *) ")
print(" *  ^  * ")
print(" * --- * ")
print("  ***** ")
-- OUTPUT:
***** 
(* o o *) 
 *  ^  * 
 * --- * 
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:55:02) 
-- CODE:
print("   *****")
print(" (* o o *)")
print("  *  ^  *")
print("  * --- *")
print("   *****")
-- OUTPUT:
*****
 (* o o *)
  *  ^  *
  * --- *
   *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:55:12) 
-- CODE:
print("   *****")
print(" (* o o *)")
print("  *  ^  *")
print("  * --- *")
print("   *****")
-- EXECUTION TIME:
0.179092
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
 (* o o *)
  *  ^  *
  * --- *
   *****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:43:01) 
-- CODE:
print(  *****  )
print((* o o *))
print( *  ^  *)
print( * --- *)
print(  *****)
-- ERROR:
File "XXXX", line 1
    print(  *****  )
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 16:43:09) 
-- CODE:
print(  *****  )
print((* o o *))
print( *  ^  *)
print( * --- *)
print(  *****)
-- EXECUTION TIME:
0.162918
-- ERROR:
  File "/home/codebench/codes/1575/996/main.py", line 1
    print(  *****  )
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 16:43:48) 
-- CODE:
print("  *****  ")
print("(* o o *)")
print(" *  ^  *")
print(" * --- *")
print("  *****")
-- EXECUTION TIME:
0.209124
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****  
(* o o *)
 *  ^  *
 * --- *
  *****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
